--- a/SelectPaises.html
+++ b/SelectPaises.html
@@ -133,7 +133,7 @@
                                 <option value="Nicaragua"             >Nicaragua</option>
                                 <option value="Níger"                 >Níger</option>
                                 <option value="Nigeria"               >Nigeria</option>
-                                <option value="Noruega"               >Noruega/option>
+                                <option value="Noruega"               >Noruega</option>
                                 <option value="Nueva Zelanda"         >Nueva Zelanda</option>
                                 <option value="Omán"                  >Omán</option>
                                 <option value="Países Bajos"          >Países Bajos</option>
@@ -159,7 +159,7 @@
                                 <option value="San Marino"            >San Marino</option>
                                 <option value="San Vicente y las Granadinas"     >San Vicente y las Granadinas</option>
                                 <option value="Santa Lucía"           >Santa Lucía</option>
-                                <option value="Santo Tomé y Príncipe" >Santo Tomé y Príncipe/option>
+                                <option value="Santo Tomé y Príncipe" >Santo Tomé y Príncipe</option>
                                 <option value="Senegal"               >Senegal</option>
                                 <option value="Serbia"                >Serbia</option>
                                 <option value="Seychelles"            >Seychelles</option>
